--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 
+  <%= javascript_include_tag :defaults %>
+
 
 
   <!-- Latest compiled and minified CSS -->
@@ -18,6 +20,26 @@
 
   <link rel="stylesheet" href="/assets/theme.css">
 
+  <script>
+    function onPlayerStateChange(event) {
+      if(event.data ===  YT.PlayerState.ENDED) {
+        location.reload();
+      }
+    }
+
+    $(function() {
+
+      var refreshVideo = function() {
+        new YT.Player('explore_js', {
+          events: {
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+      $(window).load(refreshVideo);
+    });
+  </script>
+
 
 
 
@@ -25,11 +47,17 @@
 
   <!-- Responsive on Mobile -->
 
-  <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+
+  <!-- Homescreen Images -->
+  <link rel=”apple-touch-icon” href=”/apple-touch-icon.png”/>
+  <link rel=”apple-touch-icon-precomposed” href=”/apple-touch-icon.png”/>
+
 
   <!-- Font Awesome -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+
 
 
 
