--- a/public/assets/theme.css
+++ b/public/assets/theme.css
@@ -7,6 +7,11 @@
   padding: 0px 15px;
 }
 
+body{
+    background-color: #ecf0f1;
+
+}
+
 
 /* Edit Below to Customize Widths > 768px */
 @media (min-width:768px) {
@@ -39,10 +44,32 @@
   height: 100%;
   border-radius: 0;
   border: none;
-  background-color: #222222;
+  background-color: #2c3e50;
   overflow-y: auto;
   left: 0;
   }
+
+  .side-nav-border{
+    border-top: 1px dotted #7f8c8d;
+  }
+
+  .side-nav-border-last{
+    border-bottom: 1px dotted #7f8c8d;
+  }
+
+  .sidebar_link {
+  background-color: #2c3e50 !important;
+  color: white !important;
+  }
+
+
+   .sidebar_link:hover {
+   background-color: #34495e !important;
+   color: white !important;
+   }
+
+
+
 
   /* Bootstrap Default Overrides - Customized Dropdowns for the Side Nav */
 
@@ -66,16 +93,6 @@
   width: 225px;
   }
 
- .sidebar_link {
- background-color: #222222 !important;
- color: white !important;
- }
-
-
-  .sidebar_link:hover {
-  background-color: gray !important;
-  color: white !important;
-  }
 
 
 
@@ -110,6 +127,7 @@
   .sidebar_logo_div{
     padding-top: 30px;
     padding-left: 70px;
+    padding-bottom: 20px;
   }
 
   .fa{
@@ -120,6 +138,14 @@
     color: white !important;
     background-color: #00a651 !important;
     border-radius: 3px !important;
+  }
+
+  .mobile_bookmark{
+    visibility: hidden;
+  }
+
+  .homescreen_group{
+    visibility: hidden;
   }
 
 
@@ -155,11 +181,51 @@
     visibility: hidden;
   }
 
+  .navbar-brand:hover{
+    color: white;
+    text-decoration: none;
+  }
+
   .btn-green{
     color: white !important;
     background-color: #00a651 !important;
     border-radius: 3px !important;
   }
+
+  .homescreen_title{
+    font-size: 14px;
+    text-align: left;
+  }
+
+  .homescreen_heading{
+    background-color: #ecf0f1 !important;
+    border: 0 !important;
+  }
+
+  .homescreen_panel{
+    border: 0 !important;
+  }
+
+  .homescreen_text{
+    color: #3498db;
+    margin-left: -10px !important;
+  }
+
+  .homescreen_group{
+    margin-top: 10px;
+  }
+
+  .homescreen_link{
+    padding-left: 10px;
+  }
+
+
+
+
+
+
+
+
 
 
 }
@@ -189,7 +255,7 @@
 }
 
 .panel-heading{
-  background-color: gray !important;
+  background-color: #2c3e50;
 }
 
 .panel-title{
@@ -212,3 +278,4 @@
 .report-vid{
   font-size: 14px;
 }
+
