--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,12 +5,9 @@
     <%= f.text_field :title %>
   </div>
   <div class="form-group">
-    <%= f.label :description %><br/>
-    <%= f.text_area :description, :cols => "80", :rows => "5"  %>
- </div>
-  <div class="form-group">
     <%= f.label :comedian_id %><br/>
-    <%= f.text_field :comedian_id %>
+    <%= f.collection_select :comedian_id, @comedians, :id, :name, include_blank: "Please select" %>
+
  </div>
   <%= f.submit 'Submit', :class => "btn btn-success" %>
 <% end %>
