--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,10 +57,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
   <!-- Mobile Icons -->
-  <link rel="apple-touch-icon" sizes="57x57" href="57.jpg" />
-  <link rel="apple-touch-icon" sizes="72x72" href="72.jpg" />
-  <link rel="apple-touch-icon" sizes="114x114" href="114.jpg" />
-  <link rel="apple-touch-icon" sizes="144x144" href="144.jpg" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/57.jpg" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/72.jpg" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/114.jpg" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/144.jpg" />
 
   <!-- More Mobile Stuff -->
 
