--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,7 @@
 <head>
 
   <!-- Basics -->
-  <title>Waste5 Standup Comedy</title>
-  <% if @post %>
-  <meta name="description" content="<%= @post.title %>">
-  <% end %>
+  <title>Waste5</title>
 
   <!-- Rails Pipeline -->
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
