--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+	<br/><br/>
 <%= form_for [@post] do |f| %>
   <div class="form-group">
     <%= f.label :title %><br/>
@@ -11,4 +12,8 @@
  </div>
   <%= f.submit 'Submit', :class => "btn btn-success" %>
 <% end %>
+
+<br/>
+<%= link_to "Delete Post", post_path(@post), :method => 'delete', confirm: 'Are you sure?' %>
+
 </div>
