--- a/app/views/posts/browse.html.erb
+++ b/app/views/posts/browse.html.erb
@@ -29,6 +29,8 @@
       <%= link_to "<i class='fa fa-flag report-vid' title='Report this video'></i>".html_safe, {:controller => "reports", :action => "report", :post_to_report => @post.id } %>
 
     </h3>
+    <p>Comedian: <%= link_to @comedian.name, comedian_path(@comedian) %> </p>
+
 
     <p><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.waste5.com%2Fposts%2F<%=@post.id%>&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21&amp;appId=311642788912956" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></p>
 
