--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -20,7 +20,7 @@
             <li class="side-nav-border"><%= link_to "<i class='fa fa-youtube-play'></i>Browse All Videos".html_safe, all_path, class: "sidebar_link" %></li>
             <li class="side-nav-border"><a href="/comedians" class="sidebar_link"><i class="fa fa-users"></i>  Comedians</a></li>
             <li class="dropdown side-nav-border side-nav-border-last">
-              <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-clock-o"></i>  Filter by Time <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-clock-o"></i>  Filter by Length <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="/short" class="sidebar_link sub-sidebar" >Less than 5 Minutes</a></li>
                 <li><a href="/medium" class="sidebar_link sub-sidebar">5-30 Minutes</a></li>
