--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -17,7 +17,8 @@
 
             <div class="sidebar_logo_div"><%= link_to "<span class='wlogo'>W</span><b>5</b>".html_safe, all_path, class: "sidebar_logo" %></div>
 
-            <li class="side-nav-border"><%= link_to "<i class='fa fa-youtube-play'></i>Browse All Videos".html_safe, all_path, class: "sidebar_link" %></li>
+            <li class="side-nav-border"><%= link_to "<i class='fa fa-home'></i> Home".html_safe, all_path, class: "sidebar_link" %></li>
+            <li class="side-nav-border"><%= link_to "<i class='fa fa-youtube-play'></i> Browse Videos".html_safe, show_list_path, class: "sidebar_link" %></li>
             <li class="side-nav-border"><a href="/comedians" class="sidebar_link"><i class="fa fa-users"></i>  Comedians</a></li>
             <li class="dropdown side-nav-border side-nav-border-last">
               <a href="#" class="dropdown-toggle sidebar_link" data-toggle="dropdown"><i class="fa fa-clock-o"></i>  Filter by Length <b class="caret"></b></a>
