--- a/app/views/pages/show_video_list.html.erb
+++ b/app/views/pages/show_video_list.html.erb
@@ -2,7 +2,7 @@
   <%= render 'layouts/sidebar' %>
   <div id="page-wrapper">
    <div class="row">
-    <h3 class="table_page_header">Random Videos</h3>
+    <h3 class="table_page_header">Browse Videos</h3>
     <br/>
       <table class="table table-striped">
         <% @posts.each do |post| %>
