--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
 
   <link rel="stylesheet" href="/assets/theme.css">
 
+  <!-- Font -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
 
 
   <!-- FB Stuff -->
