--- a/app/views/comedians/show.html.erb
+++ b/app/views/comedians/show.html.erb
@@ -7,9 +7,9 @@
       <table class="table table-striped">
         <% @posts.each do |post| %>
             <tr>
-              <td><%= link_to image_tag(post.image_url, height: '100', width: '100'), post_path  %></td>
-              <td><%= link_to post.title, post_path %></td>
-              <td><%= link_to "#{post.duration/60} min.", post_path %></td>
+              <td><%= link_to image_tag(post.image_url, height: '100', width: '100'), post_path(post)  %></td>
+              <td><%= link_to post.title, post_path(post) %></td>
+              <td><%= link_to "#{post.duration/60} min.", post_path(post) %></td>
             </tr>
         <% end %>
         <% if @posts.length == 0 %>
