--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
   <% if @post %>
       <meta property="og:title" content="<%=@post.title%>">
-      <meta property="og:url" content="http://www.wast5.com/posts/><%=@post.id%>" />
+      <meta property="og:url" content="http://www.waste5.com/posts/<%=@post.id%>" />
       <% if @post.image_url.length > 2 %>
         <meta property="og:image" content="<%=@post.image_url%>" />
       <% else %>
