--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,6 +101,24 @@
 
   </script>
 
+  <!-- Start of StatCounter Code for Default Guide -->
+  <script type="text/javascript">
+  var sc_project=9855821; 
+  var sc_invisible=0; 
+  var sc_security="b97673a1"; 
+  var scJsHost = (("https:" == document.location.protocol) ?
+  "https://secure." : "http://www.");
+  document.write("<sc"+"ript type='text/javascript' src='" +
+  scJsHost+
+  "statcounter.com/counter/counter.js'></"+"script>");
+  </script>
+  <noscript><div class="statcounter"><a title="web analytics"
+  href="http://statcounter.com/" target="_blank"><img
+  class="statcounter"
+  src="http://c.statcounter.com/9855821/0/b97673a1/0/"
+  alt="web analytics"></a></div></noscript>
+  <!-- End of StatCounter Code for Default Guide -->
+
 
 
 
