--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -22,7 +22,7 @@
   <div class="tab-content">
     <div class="tab-pane active" id="posts">
       <br/>
-      <p>There are <%= @posts.length %> posts from <%= @comedians.length %> comedians totaling <%= "#{number_with_precision(@hours, :delimiter => ',', precision: 2)}" %> hours of video. (<%= "#{number_with_precision(@hours/2, :delimiter => ',', precision: 2)}" %> days!)</p>
+      <p>There are <%= @posts.length %> posts from <%= @comedians.length %> comedians totaling <%= "#{number_with_precision(@hours, :delimiter => ',', precision: 2)}" %> hours of video. (<%= "#{number_with_precision(@hours/24, :delimiter => ',', precision: 2)}" %> days!)</p>
       <br/>
       <table class="table table-striped">
         <% @posts.each do |post| %>
@@ -43,31 +43,18 @@
     <div class="tab-pane" id="all_comedians">
       <br/>
 
-      <div class="panel-group" id="accordion-test">
-        <% count = 0 %>
-        <% @comedians.each do |comedian | %>
-        <% count = count + 1 %>
-
-        <div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion-test" href="#<%=count%>">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-                <%= "#{comedian.name} (#{comedian.posts.length} posts)" %>
-            </h4>
-          </div>
-          </a>
-          <div id="<%=count%>" class="panel-collapse collapse">
-            <div class="panel-body">
-              <br/>
-                <% comedian.posts.each do |post| %>
-                <p><%= link_to post.title, edit_post_path(post) %> - <%= link_to "View Post", post_path(post) %></p>
-                <% end %>
-              <br/>
-            </div>
-          </div>
-        </div>
+      <table class="table table-striped">
+        <% @comedians.each do |comedian| %>
+          <% post_count = comedian.posts.length %>
+            <tr>
+              <td><%= link_to comedian.name, comedian_path(comedian) %></td>
+              <td><%= link_to post_count, comedian_path(comedian) %></td>
+            </tr>
         <% end %>
-      </div>
+      </table>
+
+     
+  
     
       
     </div>
