--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
   <script>
   function onPlayerStateChange(event) {
     if(event.data ===  YT.PlayerState.ENDED) {
-      location.reload();
+      window.location.replace("http://www.waste5.com")
     }
   }
 
