--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -15,7 +15,7 @@
     <li class="active" ><a href="#comedians" data-toggle="tab">Comedians</a></li>
     <li><a href="#reports" data-toggle="tab">Reports</a></li>
     <li><a href="#no_comedian" data-toggle="tab">No Comedian Posts</a></li>
-    <li><a href="#arr" data-toggle="tab">Array</a></li>
+    <li><a href="#arr" data-toggle="tab">Backup Data</a></li>
   </ul>
 
   <!-- Tab panes -->
@@ -74,13 +74,11 @@
 
       <div class="tab-pane" id="arr">
         <br/>
-
-        <b>Posts</b><br/>
+        <p>Uncomment code and push when needed</p>
+<!--         <b>Posts</b><br/>
         <%= @all_posts %><br/><br/><br/><br/>
-
         <b>Comedians </b><br/>
-        <%= @all_comedians %><br/>
-      
+        <%= @all_comedians %><br/> -->
         <br/>
     </div>
 
