--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <br/><br/>
 <div class="container">
-  <%= form_for [@post] do |f| %>
+  <%= form_for [@new_post] do |f| %>
      <div class="form-group">
        <%= f.label :youtube_id %><br/>
        <%= f.text_field :youtube_id %>
