--- a/app/views/posts/browse.html.erb
+++ b/app/views/posts/browse.html.erb
@@ -25,7 +25,7 @@
 
      <h3>
 
-      <%= @post.title %>
+      <%= @post.title %> <span class="mobile_time">(<%=@post.duration/60%> min.)</span>
 
     </h3>
     <p><i class="fa fa-user"></i> <%= link_to @comedian.name, comedian_path(@comedian) %> &nbsp; <%= "<i class='"'fa fa-clock-o'"'></i> Only #{@time} videos. <a href='/all'>Reset</a>".html_safe if @time %></p>
