--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
     <div class="vid-description">
 
         <h3>
-         <%= @post.title %>
+         <%= @post.title %><span class="mobile_time"> (<%=@post.duration/60%> min.)</span>
 
 
        </h3>
